--- a/website/static/output.css
+++ b/website/static/output.css
@@ -287,6 +287,10 @@
     width: calc(var(--spacing) * 5);
     height: calc(var(--spacing) * 5);
   }
+  .size-6 {
+    width: calc(var(--spacing) * 6);
+    height: calc(var(--spacing) * 6);
+  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
@@ -388,6 +392,15 @@
   .resize {
     resize: both;
   }
+  .grid-cols-\(--grid-cols\) {
+    grid-template-columns: var(--grid-cols);
+  }
+  .grid-cols-\[3rem_repeat\(6\,1fr\)\] {
+    grid-template-columns: 3rem repeat(6,1fr);
+  }
+  .grid-cols-\[10\%_repeat\(6\,1fr\)\] {
+    grid-template-columns: 10% repeat(6,1fr);
+  }
   .grid-cols-\[20\%_20\%_1fr_auto\] {
     grid-template-columns: 20% 20% 1fr auto;
   }
@@ -402,6 +415,9 @@
   }
   .grid-cols-\[repeat\(2\,1fr\)\] {
     grid-template-columns: repeat(2,1fr);
+  }
+  .grid-cols-\[repeat\(6\,1fr\)\] {
+    grid-template-columns: repeat(6,1fr);
   }
   .flex-col {
     flex-direction: column;
@@ -632,6 +648,12 @@
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .\[--grid-cols\:3rem_repeat\(6\,1fr\)\] {
+    --grid-cols: 3rem repeat(6,1fr);
+  }
+  .\[--grid-cols\:grid-cols-\[3rem_repeat\(6\,1fr\)\]\] {
+    --grid-cols: grid-cols-[3rem repeat(6,1fr)];
   }
   .hover\:bg-gray-200 {
     &:hover {
